--- a/kalbe.ipynb
+++ b/kalbe.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Introductions"
+    "# I. Introductions"
    ]
   },
   {
@@ -13,7 +13,7 @@
    "source": [
     "- Nama : Sihar H Pangaribuan\n",
     "- Objectiv \n",
-    "    - Data Analisis\n",
+    "    - Data Analysis\n",
     "    - Develop machine learning to predict sum Quantity for the nextmonth\n",
     "    - Develop machine learning to customer segmentation"
    ]
@@ -22,7 +22,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Import Library"
+    "# II. Import Library"
    ]
   },
   {
@@ -60,7 +60,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data Loading"
+    "# III. Data Loading"
    ]
   },
   {
@@ -483,14 +483,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data Cleaning"
+    "# IV. Data Cleaning"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Data Cleaning in Data Customer"
+    "### IV.1. Data Cleaning in Data Customer"
    ]
   },
   {
@@ -604,7 +604,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Data Cleaning in Data Product"
+    "### IV.2. Data Cleaning in Data Product"
    ]
   },
   {
@@ -659,7 +659,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Data Cleaning in Data Store"
+    "### IV.3. Data Cleaning in Data Store"
    ]
   },
   {
@@ -717,7 +717,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Data Cleaning in Data Transaction"
+    "### IV.4. Data Cleaning in Data Transaction"
    ]
   },
   {
@@ -794,7 +794,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Merge all data"
+    "# V. Merge all data"
    ]
   },
   {
@@ -1007,7 +1007,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#  Exploratory Data Analysis"
+    "#  VI. Exploratory Data Analysis"
    ]
   },
   {
@@ -1636,14 +1636,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Machine Learning Regression (Time Series)"
+    "# VII. Machine Learning Regression (Time Series)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Group Data by Date"
+    "### VII.1. Group Data by Date"
    ]
   },
   {
@@ -1754,7 +1754,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Check Stationaruty"
+    "### VII.2. Check Stationaruty"
    ]
   },
   {
@@ -1809,7 +1809,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Plot Data"
+    "### VII.3. Plot Data"
    ]
   },
   {
@@ -1848,7 +1848,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Split data between data train and test"
+    "### VII.4. Split data between data train and test"
    ]
   },
   {
@@ -2046,7 +2046,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Plot Autocorrelation"
+    "### VII.5. Plot Autocorrelation"
    ]
   },
   {
@@ -2074,7 +2074,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Decompose Stationarity"
+    "### VII.6. Decompose Stationarity"
    ]
   },
   {
@@ -2130,7 +2130,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Forecast using ARIMA"
+    "###  VII.7. Forecast using ARIMA"
    ]
   },
   {
@@ -2151,7 +2151,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x159eafeb0d0>"
+       "<matplotlib.legend.Legend at 0x2607b4ac0a0>"
       ]
      },
      "execution_count": 51,
@@ -2238,7 +2238,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Forecast Holt-Winters"
+    "### VII.8. Forecast Holt-Winters"
    ]
   },
   {
@@ -2548,7 +2548,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Forecast Holt-Winters treend multiplicative"
+    "### VII.9. Forecast Holt-Winters treend multiplicative"
    ]
   },
   {
@@ -2594,7 +2594,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Inference"
+    "###  VII.10.Inference"
    ]
   },
   {
@@ -2614,10 +2614,10 @@
        "  <th>Model:</th>            <td>ARIMA(45, 1, 1)</td> <th>  Log Likelihood     </th> <td>-1371.566</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Date:</th>            <td>Sun, 30 Jul 2023</td> <th>  AIC                </th> <td>2837.132</td> \n",
+       "  <th>Date:</th>            <td>Mon, 31 Jul 2023</td> <th>  AIC                </th> <td>2837.132</td> \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                <td>11:02:05</td>     <th>  BIC                </th> <td>3015.546</td> \n",
+       "  <th>Time:</th>                <td>09:50:10</td>     <th>  BIC                </th> <td>3015.546</td> \n",
        "</tr>\n",
        "<tr>\n",
        "  <th>Sample:</th>             <td>01-01-2022</td>    <th>  HQIC               </th> <td>2908.306</td> \n",
@@ -2796,8 +2796,8 @@
        "\\toprule\n",
        "\\textbf{Dep. Variable:}          &       Qty        & \\textbf{  No. Observations:  } &    330      \\\\\n",
        "\\textbf{Model:}                  & ARIMA(45, 1, 1)  & \\textbf{  Log Likelihood     } & -1371.566   \\\\\n",
-       "\\textbf{Date:}                   & Sun, 30 Jul 2023 & \\textbf{  AIC                } &  2837.132   \\\\\n",
-       "\\textbf{Time:}                   &     11:02:05     & \\textbf{  BIC                } &  3015.546   \\\\\n",
+       "\\textbf{Date:}                   & Mon, 31 Jul 2023 & \\textbf{  AIC                } &  2837.132   \\\\\n",
+       "\\textbf{Time:}                   &     09:50:10     & \\textbf{  BIC                } &  3015.546   \\\\\n",
        "\\textbf{Sample:}                 &    01-01-2022    & \\textbf{  HQIC               } &  2908.306   \\\\\n",
        "\\textbf{}                        &   - 11-26-2022   & \\textbf{                     } &             \\\\\n",
        "\\textbf{Covariance Type:}        &       opg        & \\textbf{                     } &             \\\\\n",
@@ -2875,8 +2875,8 @@
        "==============================================================================\n",
        "Dep. Variable:                    Qty   No. Observations:                  330\n",
        "Model:                ARIMA(45, 1, 1)   Log Likelihood               -1371.566\n",
-       "Date:                Sun, 30 Jul 2023   AIC                           2837.132\n",
-       "Time:                        11:02:05   BIC                           3015.546\n",
+       "Date:                Mon, 31 Jul 2023   AIC                           2837.132\n",
+       "Time:                        09:50:10   BIC                           3015.546\n",
        "Sample:                    01-01-2022   HQIC                          2908.306\n",
        "                         - 11-26-2022                                         \n",
        "Covariance Type:                  opg                                         \n",
@@ -3126,7 +3126,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Machine Learning Clustering"
+    "# VIII. Machine Learning Clustering"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### VIII.1. Grouping Data by Date"
    ]
   },
   {
@@ -3238,7 +3245,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Check Outliers"
+    "### VIII.2. Check Outliers"
    ]
   },
   {
@@ -3347,7 +3354,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Data Normalization"
+    "### VIII.3. Data Normalization"
    ]
   },
   {
@@ -3382,7 +3389,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Model Definition"
+    "### VIII.4.  Model Definition"
    ]
   },
   {
@@ -3405,7 +3412,7 @@
     "# Elbow method\n",
     "\n",
     "inertia = []\n",
-    "#membuat iterasi dari 1-10 untuk nilai k terbaik\n",
+    "#Creating iterasi from 1-10 \n",
     "for i in range(1, 11):\n",
     "    km = KMeans(n_clusters = i, init = 'k-means++', max_iter = 300, n_init = 20, random_state = 42)\n",
     "    km.fit(data2_final)\n",
@@ -3439,19 +3446,19 @@
     "# Set up subplots\n",
     "fig, axes = plt.subplots(3, 3, figsize=(15, 8))\n",
     "\n",
-    "# Loop melalui setiap subplot\n",
+    "# for looping subplot\n",
     "for i, ax in enumerate(axes.flatten()):\n",
     "    \n",
-    "    # Set jumlah cluster\n",
+    "    # Set count cluster\n",
     "    n_clusters = i + 2\n",
     "    \n",
     "    # Initialize K-means clustering\n",
     "    kmeans = KMeans(n_clusters=n_clusters, init=\"k-means++\", n_init = 20, max_iter = 300, random_state = 42)\n",
     "\n",
-    "    # Buat SilhouetteVisualizer\n",
+    "    # create SilhouetteVisualizer\n",
     "    visualizer = SilhouetteVisualizer(kmeans, colors='yellowbrick', ax=ax)\n",
     "    \n",
-    "    # Fit visualizer ke data x\n",
+    "    # Fit visualizer to data x\n",
     "    visualizer.fit(data2_final)\n",
     "    \n",
     "    # Set title\n",
@@ -3473,7 +3480,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Model Train "
+    "### VIII.5. Model Train "
    ]
   },
   {
@@ -3766,7 +3773,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Conclusion"
+    "# IV. Conclusion"
    ]
   },
   {
