--- a/kalbe.ipynb
+++ b/kalbe.ipynb
@@ -3806,7 +3806,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- The Quantity sales for 01 januari 2023 - 30 januari 2023 is about 1387"
+    "- Based on model predictions, sum quantity sales for 01 januari 2023 - 30 januari 2023 is about 1387"
    ]
   },
   {
